<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="15dp"
    card_view:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/img_item_photo"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:layout_marginBottom="4dp"
                android:scaleType="centerCrop"
                tools:src="@color/colorAccent" />
            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="16dp"
                android:background="#4D000000"
                android:drawableLeft="@drawable/ic_navigate_next"
                android:drawablePadding="4dp"
                android:gravity="center_vertical"
                android:padding="8dp"
                android:text="@string/detail"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@android:color/white"
                android:id="@+id/btn_detail"
                android:layout_marginLeft="8dp"
                android:drawableStart="@drawable/ic_navigate_next" />
        </FrameLayout>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="16dp"
            android:ellipsize="end"
            android:maxLines="5"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="16dp">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:layout_marginStart="10dp"
                    tools:text="0"
                    android:textSize="20sp"
                    android:textColor="@android:color/black"
                    android:id="@+id/tv_item_number"
                    android:layout_marginLeft="10dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/point"
                    android:textSize="20sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@id/tv_item_number"
                    android:layout_toRightOf="@id/tv_item_number"
                    android:text="@string/name"
                    android:textSize="20sp"
                    android:textColor="@android:color/black"
                    android:id="@+id/tv_item_name"
                    android:layout_marginLeft="10dp" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>